fix(pill): improve background color contrast.

--- a/src/theme/colors.css
+++ b/src/theme/colors.css
@@ -12,6 +12,8 @@
   --c-white-dark: rgba(248, 248, 248, 1);
   --c-black-darker: rgba(13, 18, 27, 1);
   --c-black: rgba(17, 24, 39, 1);
+  --pill-bg: rgba(0, 0, 0, 0.05);
+  --pill-bg-hover: rgba(0, 0, 0, 0.08);
 
   --c-green-1: rgba(61, 214, 140, 1);
   --c-green-2: rgba(48, 164, 108, 1);
@@ -42,6 +44,8 @@ html.dark:root {
   --vp-c-text-1: var(--c-text-dark-1);
   --vp-c-brand-text: var(--c-text-light-1);
   --c-bg-accent: var(--vp-c-bg-soft);
+  --pill-bg: rgba(255, 255, 255, 0.05);
+  --pill-bg-hover: var(--vp-c-bg-alt-hover);
 
   --vp-c-bg: var(--c-black);
   --vp-c-bg-soft: rgba(22, 31, 50, 1);
